--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,11 @@
 STATUS=dev
 
 PORT=3001
+
+DB_USER=pxndxs
+DB_PASS=1234
+DB_NAME=offer_me
+DB_PORT=5433
+
+CONTAINER_NAME=offer_me
+DATABASE_URL="postgresql://pxndxs:1234@localhost:5433/offer_me"
