--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.2.6",
     "@nestjs/platform-fastify": "^10.2.6",
+    "@prisma/client": "5.3.1",
     "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.1.18",
     "@types/node": "^20.6.5",
+    "prisma": "^5.3.1",
     "typescript": "^5.2.2"
   }
 }
