--- a/package.json
+++ b/package.json
@@ -12,11 +12,17 @@
   "author": "Pxndxs",
   "license": "ISC",
   "dependencies": {
+    "@apollo/server": "^4.9.3",
+    "@as-integrations/fastify": "^2.1.0",
+    "@nestjs/apollo": "^12.0.9",
     "@nestjs/common": "^10.2.6",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.2.6",
+    "@nestjs/graphql": "^12.0.9",
     "@nestjs/platform-fastify": "^10.2.6",
-    "@prisma/client": "5.3.1",
+    "@prisma/client": "^5.3.1",
+    "apollo-server-core": "^3.12.1",
+    "graphql": "^16.8.1",
     "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
