--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@nestjs/platform-fastify": "^10.2.6",
     "@prisma/client": "^5.3.1",
     "apollo-server-core": "^3.12.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "graphql": "^16.8.1",
     "reflect-metadata": "^0.1.13"
   },
