feat: 🚀⭐️ Created auth module with Signin, Signup on RestFul API 📝🔐 Implemented traditional authentication 🗝️ and used JWT strategy with Passport for token validations 🛡️🔒, along with authorization decorators 🚧✅ using ValidRoles Enum 🧾👮♂️

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,6 @@ DB_PORT=5433
 
 CONTAINER_NAME=offer_me
 DATABASE_URL="postgresql://pxndxs:1234@localhost:5433/offer_me"
+
+JWT_SECRET=PXNDXS_DEV
+JWT_EXPIRES_IN=1d
