--- a/package.json
+++ b/package.json
@@ -19,17 +19,25 @@
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.2.6",
     "@nestjs/graphql": "^12.0.9",
+    "@nestjs/jwt": "^10.1.1",
+    "@nestjs/mapped-types": "*",
+    "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-fastify": "^10.2.6",
     "@prisma/client": "^5.4.1",
     "apollo-server-core": "^3.12.1",
+    "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "graphql": "^16.8.1",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.1.18",
+    "@types/bcrypt": "^5.0.0",
     "@types/node": "^20.6.5",
+    "@types/passport-jwt": "^3.0.10",
     "prisma": "^5.4.1",
     "typescript": "^5.2.2"
   }
